--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -16,4 +16,4 @@
           .group__name
             = group.name
           .group__message
-            メッセージなかと
+            = group.show_last_message
