--- a/app/assets/stylesheets/modules/side_bar.scss
+++ b/app/assets/stylesheets/modules/side_bar.scss
@@ -15,13 +15,14 @@
       line-height: 100px;
     }
     &__lists{
-      width: 30%;
-      float: left;
+      width: 15%;
+      float: right;
       .list{
         line-height: 100px;
         text-decoration: none;
         float:left;
         color: white;
+        margin-right: 5px;
         .icon{
           color: white;
           text-decoration: none;
